--- a/registration/templates/registration/login.html
+++ b/registration/templates/registration/login.html
@@ -24,7 +24,7 @@
         </form>
       </div>
       <!--Opcion de olvido de contraseña-->
-        <p><a href="{% url 'password_reset' %}">Olvido su contraseña?</a></p>
+        <p><a href="#">Olvidó su contraseña?</a></p>
     </div>
   </div>
 </main>
