--- a/Prestamos/templates/Prestamos/prestamo.html
+++ b/Prestamos/templates/Prestamos/prestamo.html
@@ -1,4 +1,3 @@
-
 <!-- agregamos el bloque extends que tomara el html base-->
 {% extends 'Inicio/base.html' %}
 
@@ -14,24 +13,34 @@
 {% block content %}
 
 <section>
-  <nav class="menu-navbar">
-    <ul>
-        <li><a href="{% url 'cliente_detail' cliente.id %}"> Mi Perfil </a></li>
-        <li><a href="{% url 'cuentas_cliente' cliente.id %}"> Cuentas </a></li>
-        <li><a href="{% url 'tarjetas_cliente' cliente.id %}"> Tarjetas </a></li>
-        <li><a href="{% url 'prestamo' cliente.id %}"> Préstamo </a></li>
-    </ul>
-</nav>
+    <nav class="menu-navbar">
+        <ul>
+            <li><a href="{% url 'cliente_detail' cliente.id %}"> Mi Perfil </a></li>
+            <li><a href="{% url 'cuentas_cliente' cliente.id %}"> Cuentas </a></li>
+            <li><a href="{% url 'tarjetas_cliente' cliente.id %}"> Tarjetas </a></li>
+            <li><a href="{% url 'prestamo' cliente.id %}"> Préstamo </a></li>
+            <li><a href="{% url 'prestamos_cliente' cliente.id %}">Mis préstamos </a></li>
+        </ul>
+    </nav>
     <h3 class="texto">Préstamo preaprobado</h3>
-    <div class="container" id="prestamos"> 
+    <div class="container" id="prestamos">
         <div>
-          <!-- Formulario de contacto-->
-         <form action="" method="POST">
-          {% csrf_token %}
+            <form action="" method="POST">
+                {% csrf_token %}
+                {% if messages %}
+                <div class="messages">
+                    {% for message in messages %}
+                        {% if message.level_tag == "error" %}
+                            <div class=" container p-2 text-white bg-danger"><strong>{{ message }}</strong></div>
+                        {% else %}
+                        <div class=" container p-2 text-white bg-success"><strong>{{ message }}</strong></div>
+                        {% endif %}
+                    {% endfor %}
+                </div>
+                {% endif %}
                 {{ form.as_p }}
                 <input class="btn btn-success btn-block" type="submit" value="Solicitar Prestamo">
             </form>
-        <!--{{request.POST}}-->
         </div>
     </div>
 </section>
