Formulario de préstamos completado

--- a/Prestamos/templates/Prestamos/prestamo.html
+++ b/Prestamos/templates/Prestamos/prestamo.html
@@ -39,6 +39,13 @@
                 </div>
                 {% endif %}
                 {{ form.as_p }}
+                {% if cliente.tipo_id == 1 %}
+                    <p>Monto máximo permitido para clientes Classic: $100000</p>
+                {% elif cliente.tipo_id == 2 %}
+                    <p>Monto máximo permitido para clientes Gold: $300000</p>
+                {% else %}
+                    <p>Monto máximo permitido para clientes Black: $500000</p>
+                {% endif %}
                 <input class="btn btn-success btn-block" type="submit" value="Solicitar Prestamo">
             </form>
         </div>
