--- a/Prestamos/templates/Prestamos/prestamo.html
+++ b/Prestamos/templates/Prestamos/prestamo.html
@@ -42,9 +42,9 @@
                 {% if cliente.tipo_id == 1 %}
                     <p>Monto máximo de pre-aprobación para clientes Classic: $100000</p>
                 {% elif cliente.tipo_id == 2 %}
-                    <p>Monto máximo pre-aprobación para clientes Gold: $300000</p>
+                    <p>Monto máximo de pre-aprobación para clientes Gold: $300000</p>
                 {% else %}
-                    <p>Monto máximo pre-aprobación para clientes Black: $500000</p>
+                    <p>Monto máximo de pre-aprobación para clientes Black: $500000</p>
                 {% endif %}
                 <input class="btn btn-success btn-block" type="submit" value="Solicitar Prestamo">
             </form>
