--- a/Prestamos/templates/Prestamos/prestamos_cliente.html
+++ b/Prestamos/templates/Prestamos/prestamos_cliente.html
@@ -33,7 +33,7 @@
         {% endfor %}
         </div>
     {% else %}
-        <h4 class="texto">El cliente no tiene préstamos solicitados </h4>
+        <h4 class="texto">El cliente no ha solicitado ningún préstamo </h4>
     {% endif %}
 </section>
 
