--- a/Clientes/templates/Clientes/error.html
+++ b/Clientes/templates/Clientes/error.html
@@ -14,13 +14,13 @@
 {% block content %}
 
 <section>
-    <div class="container bg-alert">
+    <div class="container bg-alert candado">
         <h1> Ups! Algo salió mal! </h1> 
     </div>
     <div>
-        <h3 class="texto">Error: El usuario está intentando acceder a información confidencial </h3>
+        <h3 class="candado">Error: El usuario está intentando acceder a información confidencial </h3>
     </div>
-    <div id="candado">
+    <div class="candado">
         <img src="{% static 'Inicio/img/candado.png' %}" alt="Señal de alto">
     </div>
 </section>
